Fix blurry text on google search page

--- a/Chrome/styles.css
+++ b/Chrome/styles.css
@@ -92,4 +92,8 @@ div.crayon-syntax * {
 {
 	font-family: var(--pixelperfect-font-sans) !important;
 }
-/* test */
+
+/* Google fix blurry text */
+#cnt.big {
+	transform: none !important;
+}
